--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/web-push": "^3.6.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
     "socket.io": "^4.7.2",
+    "web-push": "^3.6.7",
     "winston": "^3.10.0"
   },
   "devDependencies": {
