--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "axios": "^1.7.9",
+    "firebase": "^11.3.1",
     "framer-motion": "^12.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "react-swipeable": "^7.0.2",
     "react-toastify": "^11.0.3",
     "socket.io-client": "^4.8.1",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
     "workbox-broadcast-update": "^6.6.0",
@@ -61,6 +62,8 @@
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
-    "@types/react-icons": "^2.2.7"
+    "@types/react-icons": "^2.2.7",
+    "@types/react-router-dom": "^5.3.3",
+    "typescript": "^5.7.3"
   }
 }
