--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "react-swipeable": "^7.0.2",
     "react-toastify": "^11.0.3",
+    "redux": "^5.0.1",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
